[project]
name = "musicmatch"
version = "0.1.0"
description = "Music similarity CLI using CLAP embeddings and Turso vector search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "pyacoustid>=1.3.1",
    "pyturso>=0.7.0",
    "torch>=2.0",
    "tqdm>=4.65",
    "transformers>=4.30",
    "jinja2>=3.1",
    "plotly>=5.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "musicmatch/**/*.py",
    "musicmatch/templates/*.html",
]

[tool.uv]
package = true

[project.scripts]
musicmatch = "musicmatch.cli:cli"
